<resources>
    <string name="app_name">Sales Expertz Standard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_order">Order</string>
    <string name="menu_report">Report</string>
    <string name="menu_metting">Metting</string>
    <string name="menu_setting">Setting</string>

    <string name="title_home">Home</string>
    <string name="title_report">Report</string>
    <string name="title_order">Order</string>
    <string name="title_metting">Meeting</string>
    <string name="title_setting">Setting</string>

    <string name="updatemessage"><font color="#0d3848">This is old version and does not operate. Please update application</font></string>
    <string name="newupdate"><font color="#0d3848">New update available</font></string>
    <string name="internetdisconnect">Oops looks like there’s a problem - check your internet connection</string>

</resources>