<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/ic_report"
        android:title="@string/title_report" />

    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/ic_order"
        android:title="@string/title_order" />

    <item
        android:id="@+id/navigation_metting"
        android:icon="@drawable/ic_metting"
        android:title="@string/title_metting" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_setting" />
</menu>