<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.sales_expertz.Fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_order"
            app:destination="@id/navigation_order" />
    </fragment>

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.example.sales_expertz.Fragment.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_order" >
        <action
            android:id="@+id/action_navigation_order_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_report"
        android:name="com.example.sales_expertz.Fragment.ReportFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/navigation_metting"
        android:name="com.example.sales_expertz.Fragment.MettingFragment"
        android:label="@string/menu_metting"
        tools:layout="@layout/fragment_metting" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.sales_expertz.Fragment.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>